--- a/src/assets/scss/components/_feature.scss
+++ b/src/assets/scss/components/_feature.scss
@@ -3,23 +3,29 @@
 section {
     &.feature {
         box-sizing: border-box;
-        padding: 64px 0 74px;
-        min-height: 695px;
         width: 100%;
         display: flex;
         flex-direction: column;
         align-content: center;
         align-items: center;
         justify-content: flex-start;
-        row-gap: 50px;
+        padding: 64px 28px 90px;
+
+        @include media-breakpoint-up(lg) {
+            row-gap: 50px;
+            padding: 64px 0 74px;
+            min-height: 695px;
+        }
 
         &.light {
             background-color: var(--dfg-light-grey);
+            @include standard-shadow;
         }
 
         &.white {
             position: relative;
             overflow: hidden;
+
             & > .bg {
                 position: absolute;
                 z-index: -1;
@@ -38,9 +44,19 @@ section {
             align-content: center;
             justify-content: flex-start;
 
-            & > img {
-                width: 72px;
+            @include media-breakpoint-down(lg) {
+                margin-bottom: 20px;
                 height: 72px;
+            }
+
+            & > img {
+                width: 48px;
+                height: 48px;
+
+                @include media-breakpoint-up(lg) {
+                    width: 72px;
+                    height: 72px;
+                }
             }
 
             & > h2 {
@@ -56,11 +72,15 @@ section {
             justify-content: center;
             width: 100%;
             max-width: 1096px;
-            column-gap: 25px;
+            gap: 25px;
 
             & > .left,
             & > .right {
-                width: 535px;
+                width: 100%;
+
+                @include media-breakpoint-up(lg) {
+                    width: 535px;
+                }
             }
 
             & > .left {
@@ -70,13 +90,41 @@ section {
                 li {
                     @include standard-text;
                 }
+
                 strong {
                     font-weight: 700;
                 }
+
                 ul,
                 li {
-                    margin: 0 0 0 8px;
                     padding: 0;
+                }
+
+                li {
+                    margin-left: 8px;
+                }
+
+                ul {
+                    ul {
+                        margin: 10px 0 0 10px;
+                        list-style: disc;
+                    }
+                }
+
+                ul {
+                    margin: 10px 0 0 10px;
+
+                    &:not(:last-child) {
+                        margin-bottom: 10px;
+                    }
+
+                    @include media-breakpoint-up(md) {
+                        margin: 20px 0 0 20px;
+
+                        &:not(:last-child) {
+                            margin-bottom: 20px;
+                        }
+                    }
                 }
             }
 
@@ -94,5 +142,34 @@ section {
                 }
             }
         }
+    }
+}
+
+#mfa {
+    & > .bg {
+        top: -34px;
+        left: -880px;
+    }
+}
+
+#provisioning {
+    & > .bg {
+        transform: rotateZ(180deg);
+        top: 138px;
+        left: 1329px;
+    }
+}
+
+#web3 {
+    & > .bg {
+        top: 139px;
+        left: 1053px;
+    }
+}
+
+#enterprise {
+    & > .bg {
+        top: -39px;
+        left: -873px;
     }
 }
