--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -5,11 +5,20 @@ body {
         position: relative;
         overflow: hidden;
         box-sizing: border-box;
-        padding: 60px 0 100px 350px;
-        min-height: 700px;
+        padding: 45px 30px 160px;
+
+        @include media-breakpoint-up(lg) {
+            padding: 60px 0 100px 350px;
+            min-height: 700px;
+        }
 
         & > .logo {
             margin-bottom: 47px;
+            display: none;
+
+            @include media-breakpoint-up(lg) {
+                display: block;
+            }
         }
 
         & > .bg {
@@ -17,11 +26,38 @@ body {
             z-index: -1;
             inset: 0;
 
+            &.desktop {
+                display: none;
+
+                @include media-breakpoint-up(lg) {
+                    display: block;
+                }
+            }
+
+            &.mobile {
+                display: block;
+
+                @include media-breakpoint-up(lg) {
+                    display: none;
+                }
+            }
+
             &.blue {
                 width: 100%;
                 height: 100%;
                 content: " ";
                 background-color: var(--dfg-blue);
+            }
+
+            &.dots,
+            &.wave {
+                width: 1920px;
+                height: 1080px;
+
+                &.mobile {
+                    width: 100%;
+                    height: 518px;
+                }
             }
 
             &.dots {
@@ -32,6 +68,11 @@ body {
             &.wave {
                 left: -84px;
                 top: -252px;
+
+                &.mobile {
+                    top: 0;
+                    left: 0;
+                }
             }
         }
 
@@ -52,11 +93,18 @@ body {
         & > .links {
             display: flex;
             flex-flow: row wrap;
-            align-items: flex-start;
-            align-content: flex-start;
-            justify-content: flex-start;
-            row-gap: 20px;
-            margin-bottom: 60px;
+            align-items: center;
+            align-content: center;
+            justify-content: center;
+            row-gap: 32px;
+
+            @include media-breakpoint-up(lg) {
+                row-gap: 20px;
+                margin-bottom: 60px;
+                align-items: flex-start;
+                align-content: flex-start;
+                justify-content: flex-start;
+            }
 
             & > .col {
                 min-width: 315px;
