--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -9,6 +9,8 @@ body {
         overflow: hidden;
         background-color: var(--white);
         z-index: 10;
+        box-sizing: border-box;
+        padding: 0 28px;
 
         @include standard-shadow;
 
@@ -16,13 +18,21 @@ body {
             list-style: none;
             display: flex;
             flex-flow: row nowrap;
-            align-content: center;
-            align-items: center;
-            justify-content: center;
-            column-gap: 32px;
             padding: 0;
             margin: 0;
             height: 100%;
+            align-content: center;
+            align-items: center;
+            justify-content: flex-start;
+
+            @include media-breakpoint-down(lg) {
+                width: 100%;
+            }
+
+            @include media-breakpoint-up(lg) {
+                justify-content: center;
+                column-gap: 32px;
+            }
 
             &.logo {
                 margin-right: 64px;
@@ -59,6 +69,28 @@ body {
                     align-items: center;
                     align-content: center;
                     justify-content: center;
+                }
+
+                &.link,
+                &.github-link {
+                    @include media-breakpoint-down(lg) {
+                        display: none;
+                    }
+                }
+
+                &#hamburger {
+                    margin-left: auto;
+                    @include media-breakpoint-up(lg) {
+                        display: none;
+                    }
+                    button {
+                        height: 48px;
+                        width: 48px;
+                        border: 0 solid transparent;
+                        padding: 0;
+                        margin: 0;
+                        background-color: transparent;
+                    }
                 }
             }
         }
