--- a/src/assets/scss/components/_source.scss
+++ b/src/assets/scss/components/_source.scss
@@ -2,9 +2,66 @@
 
 #source {
     width: 100%;
-    padding-top: 84px;
-    padding-bottom: 64px;
     overflow: hidden;
+    position: relative;
+
+    @include media-breakpoint-down(lg) {
+        box-sizing: border-box;
+        padding: 60px 28px 80px;
+    }
+
+    @include media-breakpoint-up(lg) {
+        padding-top: 84px;
+        padding-bottom: 100px;
+    }
+
+    & > .bg {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+
+        &.desktop {
+            display: none;
+        }
+
+        &.wave {
+            width: 100%;
+        }
+
+        &.dots {
+            width: 100%;
+        }
+
+        @include media-breakpoint-between(md, lg) {
+            &.wave {
+                height: 650px;
+            }
+
+            &.dots {
+                height: 404px;
+                width: 429px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+
+        @include media-breakpoint-up(lg) {
+            &.mobile {
+                display: none;
+            }
+
+            &.desktop {
+                display: block;
+            }
+
+            &.dots,
+            &.wave {
+                width: 1920px;
+                height: 1080px;
+            }
+        }
+    }
 
     & > .content {
         display: flex;
@@ -13,18 +70,6 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        position: relative;
-
-        padding: 0 0 98px;
-
-        & > .bg {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            z-index: -1;
-            width: 1920px;
-            height: 1080px;
-        }
 
         & > .built {
             display: flex;
@@ -32,11 +77,18 @@
             align-items: center;
             justify-content: center;
             align-content: center;
-            height: 64px;
-            width: 300px;
             cursor: pointer;
-            margin-bottom: 50px;
             border-radius: 10px;
+            height: 32px;
+            width: 148px;
+            margin-bottom: 24px;
+            margin-top: 20px;
+
+            @include media-breakpoint-up(lg) {
+                height: 64px;
+                width: 300px;
+                margin-bottom: 50px;
+            }
 
             img {
                 height: 32px;
@@ -45,10 +97,16 @@
         }
 
         & > p {
-            max-width: 845px;
             text-align: center;
-            font-size: 20px;
-            line-height: 30px;
+            font-size: 14px;
+            line-height: 21px;
+            width: 100%;
+
+            @include media-breakpoint-up(lg) {
+                max-width: 845px;
+                font-size: 20px;
+                line-height: 30px;
+            }
 
             & > strong {
                 font-weight: 700;
@@ -56,28 +114,49 @@
         }
 
         & > video {
-            width: 1096px;
-            height: 607px;
             background-color: var(--white);
             filter: drop-shadow(20px 20px 60px rgba(0, 0, 0, 0.1));
             border-radius: 25px;
+            width: 100%;
+            aspect-ratio: 16/9;
+
+            @include media-breakpoint-up(lg) {
+                width: 1096px;
+                height: 607px;
+            }
         }
 
         & > .github {
-            margin-bottom: 111px;
-            height: 115px;
             column-gap: 20px;
-            padding: 0 48px;
+            height: 62px;
+            padding: 0 24px;
+            margin-bottom: 50px;
+
+            @include media-breakpoint-up(lg) {
+                height: 115px;
+                padding: 0 48px;
+                margin-bottom: 111px;
+            }
 
             span {
                 font-weight: 700;
-                font-size: 34px;
-                line-height: 51px;
+                font-size: 20px;
+                line-height: 30px;
+
+                @include media-breakpoint-up(lg) {
+                    font-size: 34px;
+                    line-height: 51px;
+                }
             }
 
             img {
-                width: 48px;
-                height: 48px;
+                width: 24px;
+                height: 24px;
+
+                @include media-breakpoint-up(lg) {
+                    width: 48px;
+                    height: 48px;
+                }
             }
         }
 
@@ -115,6 +194,10 @@
                 row-gap: 10px;
                 width: 24px;
                 margin: 0;
+
+                @include media-breakpoint-down(lg) {
+                    display: none;
+                }
 
                 & > li {
                     height: 24px;
