--- a/src/assets/scss/mixins/_text.scss
+++ b/src/assets/scss/mixins/_text.scss
@@ -1,17 +1,28 @@
+@use "./bootstrap" as *;
+
 @mixin page-title {
     font-family: "Poppins";
     font-weight: 400;
-    font-size: 52px;
-    line-height: 64.48px;
     text-transform: uppercase;
+    font-size: 32px;
+    line-height: 40px;
+
+    @include media-breakpoint-up(lg) {
+        font-size: 52px;
+        line-height: 64.48px;
+    }
 }
 
 @mixin section-title {
     font-family: "Poppins";
     font-weight: 400;
-    font-size: 72px;
     color: var(--black);
     text-align: left;
+    font-size: 32px;
+
+    @include media-breakpoint-up(lg) {
+        font-size: 72px;
+    }
 }
 
 @mixin button-text {
@@ -40,9 +51,13 @@
 @mixin standard-text {
     font-family: "Poppins";
     font-weight: 300;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 27px;
     color: var(--black);
+
+    @include media-breakpoint-up(lg) {
+        font-size: 18px;
+    }
 }
 
 @mixin bold {
