--- a/src/assets/scss/components/_feature.scss
+++ b/src/assets/scss/components/_feature.scss
@@ -28,9 +28,20 @@ section {
 
       & > .bg {
         position: absolute;
+        width: 100%;
+        height: 100%;
         z-index: -1;
         top: 0;
         left: 0;
+      }
+
+      & > .content {
+        & > .left {
+          order: 2;
+        }
+        & > .right {
+          order: 1;
+        }
       }
     }
 
@@ -142,34 +153,5 @@ section {
         }
       }
     }
-  }
-}
-
-#mfa {
-  & > .bg {
-    top: -34px;
-    left: -880px;
-  }
-}
-
-#provisioning {
-  & > .bg {
-    transform: rotateZ(180deg);
-    top: 138px;
-    left: 1329px;
-  }
-}
-
-#web3 {
-  & > .bg {
-    top: 139px;
-    left: 1053px;
-  }
-}
-
-#enterprise {
-  & > .bg {
-    top: -39px;
-    left: -873px;
   }
 }
