--- a/src/assets/scss/components/_source.scss
+++ b/src/assets/scss/components/_source.scss
@@ -17,49 +17,29 @@
 
   & > .bg {
     position: absolute;
+    z-index: -1;
     bottom: 0;
     left: 0;
-    z-index: -1;
+    width: 100%;
+    min-width: 1000px;
+    height: 100%;
 
-    &.desktop {
-      display: none;
-    }
-
-    &.wave {
-      width: 100%;
-    }
-
-    &.dots {
-      width: 100%;
-    }
-
-    @include media-breakpoint-between(md, lg) {
-      &.wave {
-        height: 650px;
+    @include media-breakpoint-down(lg) {
+      &.lines {
+        opacity: 0.8;
+        left: -100px;
+        bottom: -18%;
       }
 
-      &.dots {
-        height: 404px;
-        width: 429px;
-        left: 50%;
-        transform: translateX(-50%);
+      &.circuits {
+        opacity: 0.3;
+        left: -20%;
+        bottom: -30%;
       }
     }
 
     @include media-breakpoint-up(lg) {
-      &.mobile {
-        display: none;
-      }
-
-      &.desktop {
-        display: block;
-      }
-
-      &.dots,
-      &.wave {
-        width: 1920px;
-        height: 1080px;
-      }
+      bottom: -230px;
     }
   }
 
