move featured bg left

--- a/src/assets/scss/components/_feature.scss
+++ b/src/assets/scss/components/_feature.scss
@@ -32,7 +32,7 @@ section {
         height: 100%;
         z-index: -1;
         top: 0;
-        left: 0;
+        left: -15%;
       }
 
       & > .content {
