github button animation

--- a/src/assets/scss/components/_github-button.scss
+++ b/src/assets/scss/components/_github-button.scss
@@ -21,5 +21,20 @@ button {
       display: block;
       line-height: 30px;
     }
+
+    & > svg {
+      width: 48px;
+      height: 48px;
+    }
+
+    &.small {
+      height: 62px;
+      width: 276px;
+
+      & > svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
   }
 }
