--- a/src/assets/scss/components/_source.scss
+++ b/src/assets/scss/components/_source.scss
@@ -106,36 +106,39 @@
       }
     }
 
-    & > .github {
-      column-gap: 20px;
-      height: 62px;
-      padding: 0 24px;
-      margin-bottom: 50px;
-
-      @include media-breakpoint-up(lg) {
-        height: 115px;
-        padding: 0 48px;
-        margin-bottom: 111px;
-      }
-
-      span {
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 30px;
+    & > .github-link {
+      text-decoration: none;
+      & > .github {
+        column-gap: 20px;
+        height: 62px;
+        padding: 0 24px;
+        margin-bottom: 50px;
 
         @include media-breakpoint-up(lg) {
-          font-size: 34px;
-          line-height: 51px;
+          height: 115px;
+          padding: 0 48px;
+          margin-bottom: 111px;
         }
-      }
 
-      img {
-        width: 24px;
-        height: 24px;
+        span {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 30px;
 
-        @include media-breakpoint-up(lg) {
-          width: 48px;
-          height: 48px;
+          @include media-breakpoint-up(lg) {
+            font-size: 34px;
+            line-height: 51px;
+          }
+        }
+
+        img {
+          width: 24px;
+          height: 24px;
+
+          @include media-breakpoint-up(lg) {
+            width: 48px;
+            height: 48px;
+          }
         }
       }
     }
