fix import partial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,7 +35,7 @@
 
 {{ define "addons"}}
 <ul id="floating-socials">
-  {{ partial "socials-items.html" .}}
+  {{ partial "socials.html" .}}
 </ul>
 {{end}}
 
