--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -26,7 +26,7 @@
       </li>
     </ul>
     <ul class="socials">
-      {{ partial 'socials-items.html' .}}
+      {{ partial "socials.html" .}}
     </ul>
   </div>
 </div>
