fix header styles

--- a/assets/scss/components/_source.scss
+++ b/assets/scss/components/_source.scss
@@ -146,7 +146,8 @@
     & > .header {
       position: relative;
 
-      & > h1 {
+      & > p,
+      & > span {
         @include page-title;
 
         text-align: center;
