--- a/assets/scss/components/_socials.scss
+++ b/assets/scss/components/_socials.scss
@@ -20,10 +20,14 @@
 
   & > li {
     height: 24px;
-
-    img {
-      width: 100%;
-      height: 100%;
+    a {
+      width: 24px;
+      height: 24px;
+      display: block;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
