--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,13 +2,39 @@
 <html lang="en">
 
 <head>
-  <title>DefGuard</title>
+  <title>{{ .Site.Data.meta.title }}</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/ico" href="/images/favicon/favicon.ico" />
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png" />
+  <meta name="description" content="{{.Site.Data.meta.description}}" />
+  {{ if isset .Site.Data.meta "twitter"}}
+  {{with .Site.Data.meta.twitter}}
+  <meta name="twitter:card" content="{{.card}}" />
+  {{ if isset . "attribution" }}
+  {{ if isset .attribution "site" }}
+  <meta name="twitter:site" content="{{.attribution.site}}" />
+  {{end}}
+  {{ if isset .attribution "creator" }}
+  <meta name="twitter:site" content="{{.attribution.creator}}" />
+  {{end}}
+  {{end}}
+  {{end}}
+  {{end}}
+
+  {{ if isset .Site.Data.meta "openGraph" }}
+  {{ with .Site.Data.meta.openGraph }}
+  <meta name="og:type" content="website" />
+  <meta name="og:url" content="{{.url}}" />
+  <meta name="og:description" content="{{.description}}" />
+  {{ if isset . "image"}}
+  <meta name="og:image" content="{{.image}}" />
+  {{end}}
+  {{end}}
+  {{end}}
+
   {{ $sass := resources.Get "scss/index.scss"}}
   {{ $options := (dict "transpiler" "dartsass" "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap"
   (not
