make future id optional

--- a/layouts/partials/landing/feature.html
+++ b/layouts/partials/landing/feature.html
@@ -1,4 +1,5 @@
-<section id="{{.context.id}}" {{ if not .odd }} class="feature white" {{else}} class="feature light" {{end}}>
+<section {{ if isset .context "id" }} id="{{.context.id}}" {{end}} {{ if not .odd }} class="feature white" {{else}}
+  class="feature light" {{end}}>
   <header>
     <img src="/images/svg/{{.context.icon}}.svg" alt="wallet" />
     <h2>{{ .context.name }}</h2>
