--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -2,7 +2,7 @@
 
 body {
   & > nav {
-    height: 128px;
+    height: 64px;
     width: 100%;
     position: sticky;
     top: 0;
@@ -13,6 +13,10 @@ body {
     padding: 0 28px;
 
     @include standard-shadow;
+
+    @include media-breakpoint-up(lg) {
+      height: 128px;
+    }
 
     & > ul {
       list-style: none;
@@ -39,8 +43,13 @@ body {
         user-select: none;
 
         &.logo {
-          width: 160px;
-          height: 64px;
+          width: 80px;
+          height: 32px;
+
+          @include media-breakpoint-up(lg) {
+            width: 160px;
+            height: 64px;
+          }
           & > a {
             display: flex;
             width: 100%;
@@ -97,12 +106,22 @@ body {
           }
 
           button {
-            height: 48px;
-            width: 48px;
+            height: 24px;
+            width: 24px;
             border: 0 solid transparent;
             padding: 0;
             margin: 0;
             background-color: transparent;
+
+            @include media-breakpoint-up(lg) {
+              height: 48px;
+              width: 48px;
+            }
+
+            & > img {
+              width: inherit;
+              height: inherit;
+            }
           }
         }
       }
@@ -135,11 +154,11 @@ body {
     justify-content: flex-start;
     box-sizing: border-box;
     padding: 0 28px;
-    height: 128px;
+    height: 64px;
 
     & > img {
-      width: 160px;
-      height: 64px;
+      width: 80px;
+      height: 32px;
     }
 
     & > #mobile-nav-close {
@@ -153,18 +172,25 @@ body {
       justify-content: center;
       background-color: transparent;
       border: 0 solid transparent;
+      width: 24px;
+      height: 24px;
+      & > img,
+      & > svg {
+        width: inherit;
+        height: inherit;
+      }
     }
   }
 
   & > .bottom {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 77px 1fr 77px;
+    grid-template-columns: 1fr;
     align-items: center;
     justify-items: center;
     margin-top: 32px;
     & > * {
-      grid-column: 2;
+      grid-column: 1;
     }
     & > .items {
       display: flex;
