update style for testimonial text

--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -77,5 +77,15 @@
       align-items: center;
       justify-content: center;
     }
+
+    & > p {
+      @include standard-text;
+
+      strong {
+        @include bold;
+      }
+
+      line-height: 27px;
+    }
   }
 }
